@@ -1,3 +1,8 @@
+Unreleased
+==========
+
+* Ignore asyncore and asynchat for Python 3.12+ https://github.com/eventlet/eventlet/issues/804
+
 0.34.0
 ======
 
